--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "@octokit/core": "^3.5.1",
     "@octokit/rest": "^18.6.2",
     "got": "^11.8.2",
-    "typescript": "^4.3.2"
-  },
-  "devDependencies": {
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2",
     "dotenv": "^10.0.0"
   }
 }
