--- a/.github/workflows/fetch_currencies.yml
+++ b/.github/workflows/fetch_currencies.yml
@@ -1,6 +1,6 @@
-on:
-  schedule:
-    - cron: '0 8 * * *'
+on: push
+#  schedule:
+#    - cron: '0 8 * * *'
 jobs:
   fetch_currencies:
     runs-on: ubuntu-latest
