--- a/.github/workflows/daily_currencies.yml
+++ b/.github/workflows/daily_currencies.yml
@@ -1,8 +1,8 @@
 on:
   schedule:
-    - cron: '33 10,11,12 * * *'
+    - cron: '40 10,11,12 * * *'
 jobs:
-  fetch_currencies:
+  get_daily_currencies:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
